# sge

./: .dir-locals.el  .gitignore  AUTHORS  COPYING  Changelog  NEWS  README  README.md  apply-change  gridengine-slotwise-prempt.patch  gridengine.spec
source/: README.BUILD  README.aimk  README.platforms  README.upgrade  README.windows  aimk  aimk.private  aimk.site  build.properties  build_private.properties  configure  configure.ac  distinst.private  gridengine.spec  html_pages.html
source/MANSBUILD_sge/HTMLMAN/: index.html  manuals.html
source/clients/: Makefile
source/clients/common/: qstat_printing.c  read_defaults.c  sge_centry_qconf.c  sge_client_ijs.c  sge_qhost.c  (+7 more)
source/common/: Makefile  basis_types.h  execution_states.c  msg_common.h  msg_history.h  parse_job_cull.c  parse_qsub.c  sge.h  sge_config.h.in  sge_ijs_comm.c  sge_ijs_comm.h  sge_options.c  sge_options.h  sig_handlers.c  symbols.h  usage.c
source/experimental/: experimental.html
source/libs/: Makefile
source/scripts/: bootstrap.sh  chmodx  compilearch  distinst  distinst.site  make-tags.sh  mk_adocs  mk_ascman  mk_dist  msgmerge.csh  nonreentrant.sh  pre-dist  rpm-template.spec  scripts.html  sge_log_tee  update-version-no  zerodepend
source/security/: security.html
source/utilbin/: Makefile  adminrun.c  authuser.c  checkprog.c  fstype.c  gethostbyaddr.c  gethostname.c  getservbyname.c  infotext.c  loadcheck.c  msg_smon.h  msg_utilbin.h  now.c  qping.c  sge_passwd.c  sge_share_mon.c  spooldefaults.c  spooledit.c  spoolinit.c  tst_pthread_signals.c  uidgid.c  valid_jvmlib.c  work.c
(+834 files in other folders)
