# Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_HEADERS([config.h:common/config.h.in])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_MEMBERS([struct dirent.d_type], [] ,[] ,[[#include <dirent.h>]])

# Checks for library functions.

# Compatibility

AC_OUTPUT
