# Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_HEADERS([config.h:common/config.h.in])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([getgrouplist])

# Compatibility

AC_OUTPUT
